--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -53,7 +53,7 @@
 /* Intro */
 
 	#intro {
-		background: url('images/overlay.png'), url('../../images/cliff.webp');
+		background: url('images/overlay.png'), url('../../images/cliff.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
@@ -63,7 +63,7 @@
 /* One */
 
 	#one {
-		background: url('images/overlay.png'), url('../../images/codePic.webp');
+		background: url('images/overlay.png'), url('../../images/code.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -72,7 +72,7 @@
 /* Two */
 
 	#two {
-		background: url('images/overlay.png'), url('../../images/codePic.webp');
+		background: url('images/overlay.png'), url('../../images/code.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
